--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -6,6 +6,19 @@
 </head>
 <body>
     <h1>Crepes</h1>
-    
+    <img src="../crepe.jpg" alt="Crepes with powdered suger and berries"
+        width="500" height="500">
+        <h2>Description</h2>
+        <p>Crêpes are very thin French pancakes. 
+            They can be served with a wide 
+            variety of sweet and savory fillings 
+            and toppings. The breakfast staple 
+            dates back to at least 13th-century 
+            France.</p>
+        <p>Crepes get their name from the Latin 
+            word Crispus, meaning undulated and 
+            crinkly or from the Greek word, Crispos, 
+            which means wrapped or rolled up. They
+            are presented in a variety of ways.</p>
 </body>
 </html>
