add ingredients and steps to make crepe

--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -5,20 +5,42 @@
     <title>Crepes Recipe</title>
 </head>
 <body>
+    <hr size="2" color="black">
     <h1>Crepes</h1>
+    <hr size="2" color="black">
     <img src="../crepe.jpg" alt="Crepes with powdered suger and berries"
         width="500" height="500">
-        <h2>Description</h2>
-        <p>Crêpes are very thin French pancakes. 
-            They can be served with a wide 
-            variety of sweet and savory fillings 
-            and toppings. The breakfast staple 
-            dates back to at least 13th-century 
-            France.</p>
-        <p>Crepes get their name from the Latin 
-            word Crispus, meaning undulated and 
-            crinkly or from the Greek word, Crispos, 
-            which means wrapped or rolled up. They
-            are presented in a variety of ways.</p>
+    <h2>Description</h2>
+    <p>Crêpes are very thin French pancakes. 
+        They can be served with a wide 
+        variety of sweet and savory fillings 
+        and toppings. The breakfast staple 
+        dates back to at least 13th-century 
+        France.</p>
+    <p>Crepes get their name from the Latin 
+        word Crispus, meaning undulated and 
+        crinkly or from the Greek word, Crispos, 
+        which means wrapped or rolled up. They
+        are presented in a variety of ways.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Flour: A cup of all-purpose flour.</li>
+        <li>Eggs: Eggs act as a binder, which means 
+            they help hold the batter together.</li>
+        <li>Milk: Milk adds moisture and keeps the crêpes tender.</li>
+        <li>Water: Water helps thin the batter.</li>
+        <li>Salt: A pinch of salt enhances the overall flavor.        </li>
+        <li>Butter: Butter lends richness and moisture to the crêpes.</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Whisk the flour and eggs.</li>
+        <li>Gradually add the milk and water.</li>
+        <li>Scoop the batter onto a hot griddle.</li>
+        <li>Cook until lightly browned on the bottom.</li>
+        <li>Flip and continue cooking until done on both sides.</li>
+    </ol>
+    <hr size="2" color="black">
+
 </body>
 </html>
