create images dir and add food images

--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -8,8 +8,9 @@
     <hr size="2" color="black">
     <h1>Crepes</h1>
     <hr size="2" color="black">
-    <img src="../crepe.jpg" alt="Crepes with powdered suger and berries"
+    <img src="../images/crepe.jpg" alt="Crepes with powdered suger and berries"
         width="500" height="500">
+        <hr size="2" color="black">
     <h2>Description</h2>
     <p>Crêpes are very thin French pancakes. 
         They can be served with a wide 
