--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -8,7 +8,8 @@
     <hr size="2" color="black">
     <h1>Strawberry Cheesecake French Toast</h1>
     <hr size="2" color="black">
-    <img src="../images/toast.jpg" alt="Crepes with powdered suger and berries"
+    <img src="../images/toast.jpg" alt="french toast filled with
+    cream strawberry"
         width="500" height="500">
         <hr size="2" color="black">
     <h2>Description</h2>
