make links a list and add patrick.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
         <title>Odin Recipes</title>
     </head>
     <body>
+        <hr size="2" color="black">
         <h1>Odin Recipes</h1>
-        <a href="recipes/crepes.html">Crepes</a>
-        <a href="recipes/cinnamon-rolls.html">Cinnamon Rolls</a>
-        <a href="recipes/french-toast.html">French Toast</a>
+        <hr size="2" color="black">
+        <p>Check out these delicious recipes listed! ~</p>
+        <img src="images/patrick.gif">
+        <ul>
+            <li><a href="recipes/crepes.html">Crepes</a></li>
+            <li><a href="recipes/cinnamon-rolls.html">Cinnamon Rolls</a></li>
+            <li><a href="recipes/french-toast.html">French Toast</a></li>
+        </ul>
+        <hr size="2" color="black">
     </body>
 </html>
