--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <hr size="2" color="black">
         <h1>Odin Recipes</h1>
         <hr size="2" color="black">
-        <p>Check out these delicious recipes listed! ~</p>
+        <p id="desc">Check out these delicious recipes listed! ~</p>
+        <hr size="2" color="black">
         <img src="images/patrick.gif">
         <ul>
-            <li><a href="recipes/crepes.html">Crepes</a></li>
-            <li><a href="recipes/cinnamon-rolls.html">Cinnamon Rolls</a></li>
-            <li><a href="recipes/french-toast.html">French Toast</a></li>
+            <li><a class="recipe" href="recipes/crepes.html">Crepes</a></li>
+            <li><a class="recipe" href="recipes/cinnamon-rolls.html">Cinnamon Rolls</a></li>
+            <li><a class="recipe" href="recipes/french-toast.html">French Toast</a></li>
         </ul>
         <hr size="2" color="black">
     </body>
